HelloUltraviolet/Fixtures/RejectedSource/Procedures/MissingExplicitReturn/Source/Main.uv
//! Rejected procedure specimen for a non-unit body without explicit return.

public procedure missingExplicitReturnReference() -> i32 {
    let value: i32 = 1
    value
}
